--- a/eos_lab06/Makefile
+++ b/eos_lab06/Makefile
@@ -1,5 +1,5 @@
 all: server.c client.c
-	gcc -o server server.c -pthread
+	gcc -o server server.c -lpthread
 	gcc -o client client.c
 clean:
 	rm -rf server
